# CourseAttendance/DtoModel/ResDtos/AttendanceResponseDto.cs
@@ -1,25 +1,34 @@
 ﻿using CourseAttendance.Enums;
+using System.ComponentModel.DataAnnotations;
 
 namespace CourseAttendance.DtoModel.ResDtos
 {
 	public class AttendanceResponseDto
 	{
-		//public DateTime AttendanceDate { get; set; }
-		public DateTime? SignInTime { get; set; }
-		public AttendanceStatus Status { get; set; }
-		public string Remark { get; set; }
-		public CheckMethod CheckMethod { get; set; }
-		//public string Location { get; set; }
 		public DateTime CreatedAt { get; set; }
 		public DateTime UpdatedAt { get; set; }
-		//public List<string> AttachmentUrl { get; set; }
 
+		[Required]
+		public int Id { get; set; }
+		[Required]
+		public CheckMethod CheckMethod { get; set; }
+		[Required]
+		public DateTime StartTime { get; set; }
 		/// <summary>
 		/// 结束时间
 		/// </summary>
+		[Required]
 		public DateTime EndTime { get; set; }
+		[Required]
+		public AttendanceStatus Status { get; set; }
+		public DateTime? SignInTime { get; set; }
+		[Required]
+		public string Remark { get; set; }
 
+
+		[Required]
 		public int CourseId { get; set; }
+		[Required]
 		public string StudentId { get; set; }
 	}
 }
